--- a/admin.html
+++ b/admin.html
@@ -185,7 +185,7 @@
     // URL for fetching horses (includes buyer information)
     const apiUrl = "https://flato.q11.jvmhost.net/api/horses/with-buyers";
     // Valid statuses
-    const statuses = ["ALL", "DRAFT", "FOR_BUY", "BOUGHT", "BOUGHT_ON_FARM"];
+    const statuses = [ "DRAFT", "FOR_BUY", "BOUGHT", "BOUGHT_ON_FARM"];
 
     // Fetch horses from the server
     async function fetchHorses() {
